[CLEAN CODE] - Maven - Drop import commons-io when un-used